Add github repo link

--- a/leftychad/index.html
+++ b/leftychad/index.html
@@ -69,6 +69,7 @@
 			<a href="recipies/index.html">Recipies</a>
 			<a href="webring.html">Web Ring</a>
 			<a href="pgp.html">PGP</a></h2>
+			<a href="https://github.com/xxComatoastxx">Github</a>
 				</nav>
 		<p class="donate">DONATE:<p>
 		<img class="paypal" src="paypal.svg"><a href="https://paypal.me/ComatoastInc?country.x=US&locale.x=en_US">Paypal</a>
